--- a/java/pom.xml
+++ b/java/pom.xml
@@ -138,6 +138,12 @@
             <groupId>com.alibaba.otter</groupId>
             <artifactId>canal.client</artifactId>
             <version>1.0.24</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -153,7 +159,7 @@
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-logappender</artifactId>
             <version>4.3.0</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
     </dependencies>
 
